--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#6ac7e6</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="accent_dark">#ff2929</color>
@@ -15,6 +15,7 @@
     <color name="white_pressed">#f1f1f1</color>
     <color name="pink"> #e91e63 </color>
     <color name="pink_pressed">#ec407a</color>
-    <color name="blue_semi_transparent">#805677fc</color>
+
+    <color name="blue_semi_transparent">#8043c8d4</color>
     <color name="blue_semi_transparent_pressed">#80738ffe</color>
 </resources>
